--- a/index (1).html
+++ b/index (1).html
@@ -209,7 +209,7 @@
     <div class="header">
         <div class="alignall">
             <div class="full fullmenu">
-                <a href="/"><img class="headlogo" src="./theme/SrcImg/Logoall.png"></a>
+                <a href="#"><img class="headlogo" src="./theme/SrcImg/Logoall.png"></a>
                 <div class="wrap_menu">
                     <div class="em_block">
                         <div class="e_menu">
@@ -247,7 +247,7 @@
                             </a>
                         </div>
                         <div class="e_menu">
-                            <a href="https://www.facebook.com/hung.xe.1/" target="_blank" class="em_lv1">FB GM
+                            <a href="https://www.facebook.com/hoang.min.tv" target="_blank" class="em_lv1">FB GM
                         </div></a>
                     </div>
                 </div>
@@ -578,7 +578,7 @@
     <div class="fixzone active">
         <div class="close_fz"></div>
         <div class="min_fz"></div>
-        <a style="color:tomato" href="#">Facebook GM Cần Hỗ Trợ Liên Hệ Click Tại
+        <a style="color:tomato" href="https://www.facebook.com/hoang.min.tv">Facebook GM Cần Hỗ Trợ Liên Hệ Click Tại
             Đây!</a>
         <li class="active">
             Máy Chủ : <b><span style='color:green'>Online</span>
