--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <div class="header">
         <div class="alignall">
             <div class="full fullmenu">
-                <a href="/"><img class="headlogo" src="./theme/SrcImg/Logoall.png"></a>
+                <a href="#"><img class="headlogo" src="./theme/SrcImg/Logoall.png"></a>
                 <div class="wrap_menu">
                     <div class="em_block">
                         <div class="e_menu">
@@ -218,7 +218,7 @@
                             </a>
                         </div>
                         <div class="e_menu">
-                            <a href="#">
+                            <a  target="_blank" href="https://drive.google.com/file/d/1GGmbbahPlW38mFhG91eezqNuTGQiOkR_/view?usp=sharing">
                                 <div class="em_lv1">Tải Game</div>
                             </a>
                         </div>
@@ -247,7 +247,7 @@
                             </a>
                         </div>
                         <div class="e_menu">
-                            <a href="https://www.facebook.com/hung.xe.1/" target="_blank" class="em_lv1">FB GM
+                            <a href="https://www.facebook.com/hoang.min.tv" target="_blank" class="em_lv1">FB GM
                         </div></a>
                     </div>
                 </div>
@@ -578,7 +578,7 @@
     <div class="fixzone active">
         <div class="close_fz"></div>
         <div class="min_fz"></div>
-        <a style="color:tomato" href="#">Facebook GM Cần Hỗ Trợ Liên Hệ Click Tại
+        <a style="color:tomato" href="https://www.facebook.com/hoang.min.tv">Facebook GM Cần Hỗ Trợ Liên Hệ Click Tại
             Đây!</a>
         <li class="active">
             Máy Chủ : <b><span style='color:green'>Online</span>
@@ -593,13 +593,11 @@
             
 
     </div>
-
     <section class="section-video" >
         <video autoplay playsinline loop controls preload="metadata" width="100%" id="myvideo" style="display: none;">
-            <iframe src="https://www.nhaccuatui.com/mh/background/JdXqeLhaWg0N" width="0" height="0" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+            <iframe src="https://www.nhaccuatui.com/mh/auto/SgUBNBYilfRM" width="0" height="0" frameborder="0" allowfullscreen allow="autoplay"></iframe>
         </video>
     </section>
-
 <script>
 
     var url = window.location.href;
@@ -612,7 +610,7 @@
 <script src="./theme/SrcJava/FuncAll.js" type="text/javascript"></script>
 
 </html>
-<iframe src="https://www.nhaccuatui.com/mh/background/JdXqeLhaWg0Ns" width="0" height="0" frameborder="0" allowfullscreen
-    allow="autoplay"></iframe>
+<!-- <iframe src="https://www.nhaccuatui.com/mh/background/JdXqeLhaWg0Ns" width="0" height="0" frameborder="0" allowfullscreen
+    allow="autoplay"></iframe> -->
 
 </body>
