--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="wrap_menu">
                     <div class="em_block">
                         <div class="e_menu">
-                            <a href="/">
+                            <a href="#">
                                 <div class="em_lv1 em_home active"></div>
                             </a>
                         </div>
@@ -396,7 +396,7 @@
                                 </div>
                             </div>
                             <div class="navigator">
-                                <a href="/">
+                                <a href="#">
                                     <div class="e_nav">Trang chủ</div>
                                 </a>
                                 <div class="ar_nav"></div>
